feat(citas hoy) crear un endpoint que permita obtener únicamente las citas del día de hoy
