# src/routes/cita/cita.routes.ts
@@ -5,6 +5,7 @@ const router = Router();
 const citaController = new CitaController();
 
 // Todas las operaciones de agenda requieren autenticación
+router.get('/hoy', citaController.getToday);
 router.get('/clinica/:clinicaId',  citaController.getAllByClinica);
 router.post('/',  citaController.create);
 router.patch('/:id',  citaController.update);
